# uv-demo

./: pyproject.toml
